# ImgDB-Inertia

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  ClusterVector.java  LongIntVector.java  README  README.md  SWIGTYPE_p_imageId_list.java  SWIGTYPE_p_int.java  SWIGTYPE_p_int_vector.java  SWIGTYPE_p_std__string.java  SWIGTYPE_p_std__vectorTlong_t.java  SWIGTYPE_p_unsigned_char.java  WTF  build-python.py  build.sh  imgdb.cpp  imgdb.h  imgdb.java  imgdb.pro  libimgdb.pro
.svn/: all-wcprops  dir-prop-base  entries
.svn/text-base/: DoubleVector.java.svn-base  ImgdbEngine.java.svn-base  IntVector.java.svn-base  SWIGTYPE_p_double.java.svn-base  SWIGTYPE_p_imageId.java.svn-base  SWIGTYPE_p_void.java.svn-base  bloom_filter.java.svn-base  clustersStruct.java.svn-base  gen_swig.bat.svn-base  gen_swig.sh.svn-base  imgdb.cpp.svn-base  imgdb.h.svn-base  imgdb.i.svn-base  imgdbJNI.java.svn-base  imgdb_python_linux_wrap.h.svn-base  imgdb_python_wrap.h.svn-base  imgdb_wrap.h.svn-base  include.lnk.svn-base
ImgDB/: CMakeLists.txt  bloom_filter.cpp  bloom_filter.h  haar.h  imgdb.cpp  imgdb.h  libimgdb.pro
cmake/: 00-Common.cmake  Platform.cmake
imgsearch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
staticlibs/: WTF
tests/: CMakeLists.txt  build-tests.sh  libimgdb-tests.pro  run-tests.sh  test.cpp  test.py
tests/testimages/bakedlayers/: upper-test-fake.tga  upper-test-grain.tga  upper-test.tga
